Small CSS fix as `align-items` property has mixed support for `end`.

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 .ItemsContainer {
   display: flex;
   justify-content: center;
-  align-items: end;
+  align-items: flex-end;
 }
 
 .centerDiv {
